--- a/WolfCraft/pom.xml
+++ b/WolfCraft/pom.xml
@@ -4,6 +4,12 @@
   <artifactId>WolfCraft</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
