Added ghost mode for dead people

--- a/WolfCraft/src/main/resources/plugin.yml
+++ b/WolfCraft/src/main/resources/plugin.yml
@@ -15,3 +15,9 @@ commands:
   whatami:
     description: Shows you what role you have
     usage: /<command>
+  ghost:
+    description: Woho
+    usage: /<command>
+  unghost:
+    description: No wuhu
+    usage: /<command>
